test/language/errors/errors_loop.hm
# @exception can't iterate over integer (expected array or table)

for x in 24 { echo x }
